--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<a href="https://raw.githubusercontent.com/Pineapple-Geek/streamtv.repo/master/repo/zips/StreamTV-v1.1.zip">streamtv-v1.1.zip</a>
+<a href="streamtv-v1.1.zip">streamtv-v1.1.zip</a>
